manifests/argocd/overlay/http_route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: cd.nhlabs.org
  name: https
spec:
  parentRefs:
  - name: shared-gateway
    namespace: shared-gateway
    sectionName: https
  hostnames:
  - "cd.nhlabs.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: argocd-server
          port: 80
